--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -56,9 +56,17 @@
                 </div>
                 <div class="pure-u-1-2">
                     <div>
-                        <a href="{{ path('sortie_creer_lieu') }}">
+                        <a href="">
                             <img src="{{ asset('img/plus-circle.svg') }}" alt="icon More">
                         </a>
+                    </div>
+                    <div class="creation-champs pure-control-group" id="select-ville">
+                        <label for="select-ville-balise">Ville : </label>
+                        <select id="select-ville-balise">
+                            {% for ville in villes %}
+                                <option value="{{ ville.id }}">{{ ville.nom }}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                     <div class="creation-champs pure-control-group" id="select-creation">
                         {{ form_row(formSortie.lieu) }}
@@ -108,30 +116,5 @@
     </script>
 
 
-    <script>
-        window.onload = function() {
-            changementInfoLieu();
-        };
-        document.getElementById('select-creation').addEventListener("change", changementInfoLieu);
-
-        function changementInfoLieu(){
-            select = document.getElementById('select-creation').getElementsByTagName("select");
-            for(i = 0; i < select.length; i++){
-                choix = select[i].value;
-            }
-            lieux = document.getElementById('hidden').value;
-            lieuxObj = JSON.parse(lieux);
-            trouver = false;
-            for (i = 0; i < lieuxObj.length; i++) {
-                if (lieuxObj[i].id == choix) {
-                    trouver = lieuxObj[i];
-                }
-            }
-            if (trouver) {
-                document.getElementById("rue-holder").innerText = trouver.rue;
-                document.getElementById("latitude-holder").innerText = trouver.latitude;
-                document.getElementById("longitude-holder").innerText = trouver.longitude;
-            }
-        }
-    </script>
+    <script src="{{ asset('js/selectCreationModification.js') }}"></script>
 {% endblock %}
